[ADD] Meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="douglasKim">
+    <meta name="Publisher" content="douglasKim">
+    <meta name="description" content="VanilaJS todo list webapp to practice javascript, html, css, webpack, typescript, tdd, etc...">
+    <meta property="og:image" content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png">
+    <meta property="og:title" content="Todo-List">
+    <meta property="og:description" content="VanilaJS todo list webapp to practice javascript, html, css, webpack, typescript, tdd, etc...">
     <title>Todo-List</title>
     <link rel="stylesheet" href="index.css">
 </head>
