[FIX] loading on html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="loading">
+        <div class="wavy">
+            <span style="--i:1">L</span>
+            <span style="--i:2">o</span>
+            <span style="--i:3">a</span>
+            <span style="--i:4">d</span>
+            <span style="--i:5">i</span>
+            <span style="--i:6">n</span>
+            <span style="--i:7">g</span>
+            <span style="--i:8">.</span>
+            <span style="--i:9">.</span>
+            <span style="--i:10">.</span>
+        </div>
+    </div>
     <div id="app"></div>
     <script type="module" src="src/app.js"></script>
 </body>
